--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
     font-family: 'GhibliStandard';
     src: url('fonts/Ghibli-Font/Eyad\ Al-Samman\ -\ Ghibli.otf') format('opentype');
   }
+*{    font-size: calc(15px + 0.390625vw);
+}
 body{
     display: flex;
     align-items: center; 
@@ -60,17 +62,20 @@ body{
     padding: 50px; /* Adjust the padding as needed */
 }
 .top-row{
+    position: relative;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 .heading{
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    font-size: 2.5em;
+    font-size: 1.7rem;
+    width: 100%;
     font-family: 'GhibliBold';
 }
 .introduction{
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    font-size: 1.5em;
+    font-size: 1rem;
     font-family: 'GhibliStandard';
 }
 
@@ -78,10 +83,11 @@ body{
 
 }
 .sub-heading{
-    font-size: 1.6em;
+    font-size: 1.2rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     font-family: 'GhibliBold';
     color: rgba(248, 248, 28, 0.966);
+    width: 100%;
 }
 
 /*--Button Styles--*/
@@ -91,9 +97,9 @@ body{
   height: 50%;
 	border-radius: 0rem;
 	color: #ffffff;
-	font-size: 0.6875rem;
+	font-size: 0.6875em;
 	font-weight: 700;
-	letter-spacing: 0.3rem;
+	letter-spacing: 0.1rem;
   position: relative;
   min-width: max-content;
   
@@ -112,7 +118,7 @@ body{
 
 .btn-slice .top  {
 	position: relative;
-	height: 6px;
+	height: 15px;
 	overflow: hidden;
   top: 0;
   -webkit-transition: all 300ms cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
@@ -136,7 +142,7 @@ body{
 
 .btn-slice .bottom  {
 	position: relative;
-	height: 6px;
+	height: 15px;
 	overflow: hidden;
   bottom: 0;
   -webkit-transition: all 300ms cubic-bezier(1.000, 0, 0.025, 1); /* older webkit */
@@ -159,13 +165,13 @@ body{
 }
 
 .btn-slice .bottom span {
-  top: -6px;
+  top: -15px;
   position: absolute;
   left: 0;
 }
 
 .btn-slice:hover .top {
-	top: -5px;
+	top: -15px;
   -webkit-transition-delay:0.35s;     
   -moz-transition-delay::0.35s; 
   -ms-transition-delay::0.35s;     
@@ -174,7 +180,7 @@ body{
 }
 
 .btn-slice:hover .bottom {
-	bottom: -5px;
+	bottom: -15px;
   -webkit-transition-delay:0.35s;     
   -moz-transition-delay::0.35s; 
   -ms-transition-delay::0.35s;     
@@ -190,7 +196,7 @@ body{
 	width: 60px;
 	background-color: #ffffff;
 	position: absolute;
-	margin-top: 6px;
+	margin-top: 15px;
 	right: -35px;
   
   -webkit-transition: all 1000ms cubic-bezier(0.890, 0, 0.140, 1); /* older webkit */
@@ -252,6 +258,9 @@ body{
     .card {
         width: 100%;
     }
+    .main-text{
+        width: 100%;
+    }
   }
   .card-title {
     font-family: 'GhibliBold';
@@ -274,7 +283,7 @@ body{
     color: white;
     flex-basis: 100%;
     padding-left: 30px;
-    width: 100%;
+    width: 100vw;
     margin: auto;
     z-index: 2;
     text-align: center;
@@ -282,3 +291,111 @@ body{
 }
 
  
+  #audioPlayer {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    z-index: 5;
+    border: none;
+  }
+  .play-music-link{
+    color: white!important;
+    text-decoration: none;
+  }
+
+  
+
+
+  .leaf{
+    position:absolute ;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    opacity: 0.7;
+}
+.leaf div{
+position:absolute ;
+display:block ;
+}
+.leaf div:nth-child(1){
+    left:20%; 
+    animation:fall 15s linear infinite ;
+    animation-delay:-2s;
+
+}
+.leaf div:nth-child(2){
+    left:70%; 
+    animation:fall 15s linear infinite ;
+    animation-delay:-4s;
+}
+.leaf div:nth-child(3){
+    left:10%; 
+    animation:fall 20s linear infinite ;
+    animation-delay:-7s;
+    
+}
+.leaf div:nth-child(4){
+    left:50%; 
+   animation:fall 18s linear infinite ; 
+   animation-delay:-5s;
+}
+.leaf div:nth-child(5){
+    left:85%; 
+    animation:fall 14s linear infinite ;
+    animation-delay:-5s;
+}
+.leaf div:nth-child(6){
+    left:65%; 
+    animation:fall 16s linear infinite ;
+    animation-delay:-10s;
+}
+.leaf div:nth-child(7){
+    left:90%; 
+    animation:fall 15s linear infinite ;
+    animation-delay:-8s;
+}
+.leaf div:nth-child(8){
+    left:70%; 
+    animation:fall 15s linear infinite ;
+    animation-delay:-1s;
+}
+.leaf div:nth-child(9){
+    left:40%; 
+    animation:fall 15s linear infinite ;
+    animation-delay:-9s;
+}
+.leaf div:nth-child(10){
+    left:30%; 
+    animation:fall 15s linear infinite ;
+    animation-delay:-5s;
+}
+
+@keyframes fall{
+    0%{
+        opacity:1;
+        top:-10%;
+        transform:rotate(0deg);
+    }
+    20%{
+        opacity:0.8;
+        transform:rotate(45deg);
+    }
+    40%{
+
+        transform:(90deg);
+    }
+    60%{
+        
+       transform:rotate(135deg); 
+    }
+    80%{
+    
+        transform:rotate(180deg);
+    }
+    100%{
+        opacity:0.5;
+        top:110%;
+        transform:(225deg);
+    }
+    }
