--- a/style.css
+++ b/style.css
@@ -304,7 +304,24 @@ body{
     text-decoration: none;
   }
 
-  
+  .background-text{
+    text-decoration: underline;
+    text-decoration-color: yellow;
+    text-decoration-style: solid;
+    animation: floatAnimation 1.5s infinite;
+
+  }
+  @keyframes floatAnimation {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
 
 
   .leaf{
